fix(Shop): remove overflow-x: hidden;  in shop custom mosaic style

--- a/assets/scss/layouts/_shop.scss
+++ b/assets/scss/layouts/_shop.scss
@@ -258,7 +258,7 @@
         margin-bottom: 0.9em;
       }
       .buy-custom-mosaic {
-        overflow-x: hidden; 
+        //overflow-x: hidden; 
         display: flex;
       }
       .buy-custom-item:hover {
